# googlecloudhack

./: .coverage  .dockerignore  .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  PROJECT_PROMPT.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
agents/: DEPLOY.md  agent.py  agent_engine_app.py  agent_engine_factory.py  agent_engine_requirements.txt  demo.py  deploy.py  gating.py  mcp_backend.py  native_mongo_tools.py  run.py  tools.py
api/: agent_engine.py  auth.py  memory.py  routes.py  secrets.py  server.py  workload.py
contracts/: README.md  _generate.py  evidence_pack.schema.json
contracts/examples/: evidence_pack.example.json
controller/: __init__.py  auth.py  backends.py  demo_fixture.py  diagnosis.py  explain.py  ledger.py  ledger_store.py  narrate.py  orchestrator.py  pack.py  persistence.py  phases.py  schemas.py  workload.py
dashboard/: .dockerignore  .gitignore  APPROVAL_CONTRACT.md  DEPLOY.md  Dockerfile  README.md  middleware.ts  next.config.ts  package-lock.json  package.json  vitest.config.ts
dashboard/app/: globals.css  layout.module.css  layout.tsx  overview.module.css  page.module.css  page.tsx  run-review.module.css
dashboard/components/: AgentRunView.tsx  Logo.tsx  (+28 more)
demo/: architecture.md  dashboard-walkthrough.md  demo-script.md
deploy/: cloudrun.md  deploy_cloudrun.sh
docs/: deploy.md  safety-boundary-decisions.md
evals/: README.md  __init__.py  grade.py  run_eval.py  scorecard.json  scorecard.md
runs/: demo-001.json
seed/: seed_demo_fixture.py  seed_users.py  seed_workload.py
(+93 files in other folders)
