[project]
name = "gcrah"
version = "0.1.0"
description = "Evidence-Driven DBRE Agent — Gemini + MongoDB performance engineer"
requires-python = ">=3.12,<3.14"
dependencies = [
    "google-adk>=2.1.0",
    "google-genai>=1.0",
    "pydantic>=2.0",
    "pymongo>=4.6",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
# spikes are exploratory day-0 scripts — relax import/statement layout rules
"spikes/**" = ["E401", "E402", "E702"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]
